// Vitest Snapshot v1

exports[`stegvisning - Start > rendrer slik den skal med fornavn, med riktig heading, bilde, tekst og knapper 1`] = `
<DocumentFragment>
  <section
    class="_section_645946 _section__largePadding_645946"
  >
    <div
      class="_wrapper_09901f"
    >
      <img
        alt=""
        class="_image_09901f"
        src="/pensjon/kalkulator/src/assets/frida.svg"
      />
      <div
        class="_wrapperText_09901f"
      >
        <h2
          class="_heading_09901f navds-heading navds-heading--large navds-typo--spacing"
          tabindex="-1"
        >
          stegvisning.start.title Ola!
        </h2>
        <p
          class="navds-ingress"
        >
          stegvisning.start.ingress
        </p>
        <button
          class="_button_09901f navds-button navds-button--primary navds-button--medium"
          type="submit"
        >
          <span
            class="navds-label"
          >
            stegvisning.start.start
          </span>
        </button>
        <button
          class="navds-button navds-button--tertiary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - Start > rendrer slik den skal uten fornavn, med riktig heading, bilde, tekst og knapper 1`] = `
<DocumentFragment>
  <section
    class="_section_645946 _section__largePadding_645946"
  >
    <div
      class="_wrapper_09901f"
    >
      <img
        alt=""
        class="_image_09901f"
        src="/pensjon/kalkulator/src/assets/frida.svg"
      />
      <div
        class="_wrapperText_09901f"
      >
        <h2
          class="_heading_09901f navds-heading navds-heading--large navds-typo--spacing"
          tabindex="-1"
        >
          stegvisning.start.title!
        </h2>
        <p
          class="navds-ingress"
        >
          stegvisning.start.ingress
        </p>
        <button
          class="_button_09901f navds-button navds-button--primary navds-button--medium"
          type="submit"
        >
          <span
            class="navds-label"
          >
            stegvisning.start.start
          </span>
        </button>
        <button
          class="navds-button navds-button--tertiary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
